--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>UltiShaper</title>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+  <![endif]-->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <% unless Rails.env.production? %>
     <script type="text/javascript">
     window.onkeydown = myKeyEvent;
@@ -33,8 +37,53 @@
     <% end %>
 </head>
 <body>
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="/">UltiShaper</a>
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li><%= link_to "Design", "app#" %></li>
+            <li><%= link_to "Shapes", shapes_path %></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<%= yield %>
+<div class="container">
+    <div class="row">
+      <div class="span8"><%= yield %></div>
+      <div class="span4">
+        <h3>What is the UltiShaper?</h3>
+        <p>The UltiShaper is a simple but powerful design tool. Its uses range from education to engineering.</p>
+
+<p>Thanks to the amazing 'building blocks' CoffeeSCAD and Blockly, the UltiShaper is a tool that allows:</p>
+<ul><li><b>Design by dragging and dropping</b>! Anyone can do it!</li>
+<li><b>Requires no CAD knowledge</b>, you get instant feedback.</li>
+<li><b>Zero installation</b>, it all runs in the browser. And it will be upgraded for free.</li>
+<li><b>No syntax to learn</b>. No need to recall names, no opportunities for typo's or bugs.</li>
+<li><b>Instant sharing</b> of either your whole project or just a little building block or shortcut.</li>
+<li><b>Powerful</b>. With UlitShaper you cannot only design an object, you can even design a design tool and define an interface (e.g. like a slider) to modify the size of a ring.</li>
+</ul>
+
+<p>The UltiShaper allows you to design objects by dragging and dropping blocks onto a canvas. The beauty is that you can change any decision you've made without having to go back (e.g. undo) and repeat all of your steps after your change (common in almost all non-parametric design programs).</p>
+
+        <h4>Powered by:</h4>
+<ul><li><a href="http://www.coffeescad.net/">CoffeeSCAD</a> by Mark Moisette e.a.</a></li>
+<li><a href="http://blockly.googlecode.com">Blockly</a> by Neil Fraser e.a.</li>
+</ul>
+
+<h4>What's in a name?</h4>
+<p>The name UltiShaper, as the "Ulti" may reveal, comes from <a href="http://www.ultimaker.com/">Ultimaker</a>. The Ultimaker is a high-performance 3D printer that is affordable. It prints fast, can make bigger objects and at an extremely high resolution!</p>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
