--- a/app/views/shapes/_form.html.erb
+++ b/app/views/shapes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @shape, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @shape, :validate => true do |f| %>
   <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
