Minor fixes and cleanups to the rails app (managing shapes)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
         <a class="brand" href="/">UltiShaper</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><%= link_to "Design", "app#" %></li>
+            <li><%= link_to "Design", "/app#" %></li>
             <li><%= link_to "Shapes", shapes_path %></li>
           </ul>
         </div>
