--- a/app/views/shapes/index.html.erb
+++ b/app/views/shapes/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= link_to shape.id, shape_path(shape) %></td>
         <td><%= shape.name %></td>
-        <td><%= shape.xmldata %></td>
+        <td><%= truncate(shape.xmldata,:length => 50, :separator => "/>") %></td>
         <td><%=l shape.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
