- shape creation works : woot !  * lots of hacks and workarounds, but most of it is a-ok  * renamed myUpdateFunction to something more explicit : codeUpdateFunction  * updated codeUpdateFunction for new assembly.add api, plus some minor cleanups  * need to figure out a clean way to handle custom blockly elements inclusion

--- a/public/lib/CoffeeSCad/src/app/editors/blocklyEditor/blocklyEditorView.tmpl
+++ b/public/lib/CoffeeSCad/src/app/editors/blocklyEditor/blocklyEditorView.tmpl
@@ -6,12 +6,9 @@
 	  	<div id="qsResults"></div></td>
 	</tr>
 </table>
-<table style="width:100%">
-    <tr>
-      <td><h5><b>Inputs</b></h5></td>
-    </tr>
-</table>
-<embed id="inputPane" src="assets/plane.svg" height=140 width=380 type="image/svg+xml"/>
+<div style="width:100%">
+	<h5><b>Inputs</b></h5>
+</div>
 <div id="blocklyToolbox" >
   <category name="Numbers">
     <block type="math_number"><title name="NUM">10</title></block>
@@ -54,7 +51,7 @@
   </category>
 </div>
 <div id="svgDiv" style="width: 100%"></div>
-
+<embed id="inputPane" src="assets/plane.svg" height=10 width=10 type="image/svg+xml"></embed>
 <!--
 	
 <div>
@@ -65,12 +62,9 @@
 </div>
 -->
 <!--
-
 </div>
-
 <div id="jqDialog" title="Dialog Title">
   <p><span class="ui-icon ui-icon-alert" style="float: left; margin: 0 7px 20px 0;"></span>Your canvas will be cleared. Are you sure?</p>
 </div>	
 -->
-
 </script>
