--- a/public/lib/CoffeeSCad/app/editors/blocklyEditor/blocklyEditorView.tmpl
+++ b/public/lib/CoffeeSCad/app/editors/blocklyEditor/blocklyEditorView.tmpl
@@ -43,6 +43,7 @@
       <block type="polygons_polygon"><title name="polyName">polyline</title><statement name="pointList"><block type="polygons_point" inline="true"><next><block type="polygons_point" inline="true"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="polygons_point" inline="true"><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block></next></block></next></block></statement></block>
       <block type="polygons_point"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block>
       <block type="polygons_extrude"><value name="extrudeZ"><block type="math_number"><title name="NUM">10</title></block></value></block>
+      <block type="polygons_expand"><value name="expandX"><block type="math_number"><title name="NUM">10</title></block></value><value name="expandY"><block type="math_number"><title name="NUM">10</title></block></value></block>
     </category>
   </category>
 </div>
