--- a/public/lib/CoffeeSCad/src/app/editors/blocklyEditor/blocklyEditorView.tmpl
+++ b/public/lib/CoffeeSCad/src/app/editors/blocklyEditor/blocklyEditorView.tmpl
@@ -15,6 +15,7 @@
     <block type="shape_sphere"><value name="diameter"><block type="math_number"><title name="NUM">10</title></block></value></block>
     <block type="shape_cylinder"><value name="diameter1"><block type="math_number"><title name="NUM">10</title></block></value><value name="height"><block type="math_number"><title name="NUM">10</title></block></value></block>
     <block type="shape_cone" inline="true" x="5" y="89"><title name="CENTEROBJECT">TRUE</title><value name="diameter1"><block type="math_number"><title name="NUM">2</title></block></value><value name="diameter2"><block type="math_number"><title name="NUM">12</title></block></value><value name="height"><block type="math_number"><title name="NUM">10</title></block></value></block>
+    <block type="polygons_extrude"><value name="extrudeZ"><block type="math_number"><title name="NUM">20</title></block></value><statement name="shapeToExtrude"><block type="polygons_sketch"><title name="code">polygon([[-10,-12],[14,-12],[14,4],[3,14],[-4,8],[-4,13],[-7,13],[-7,6],[-10,3]]);</title></block></statement></block>
   </category>
   <category name="Cursor">
     <block type="cursor_move"><title name="NAME">moveBy</title><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><value name="tY"><block type="math_number"><title name="NUM">0</title></block></value><value name="tZ"><block type="math_number"><title name="NUM">0</title></block></value></block>
@@ -43,6 +44,7 @@
       <block type="polygons_polygon"><title name="polyName">polyline</title><statement name="pointList"><block type="polygons_point" inline="true"><next><block type="polygons_point" inline="true"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="polygons_point" inline="true"><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block></next></block></next></block></statement></block>
       <block type="polygons_point"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block>
       <block type="polygons_extrude"><value name="extrudeZ"><block type="math_number"><title name="NUM">10</title></block></value></block>
+      <block type="polygons_expand"><value name="expandX"><block type="math_number"><title name="NUM">10</title></block></value><value name="expandY"><block type="math_number"><title name="NUM">10</title></block></value></block>
     </category>
   </category>
 </div>
