--- a/public/lib/CoffeeSCad/src/app/editors/externalEditor/externalEditorView.tmpl
+++ b/public/lib/CoffeeSCad/src/app/editors/externalEditor/externalEditorView.tmpl
@@ -1,3 +1,4 @@
 <script id="externalEditorViewTmpl" type="text/x-underscore-template">
-External page goes here...
+<iframe id="externalEditorIframe" name="externalEditor" src="/lib/poly-editor/index.html" width="600px" height="300px">
+
 </script>
