--- a/public/lib/CoffeeSCad/src/app/editors/blocklyEditor/blocklyEditorView.tmpl
+++ b/public/lib/CoffeeSCad/src/app/editors/blocklyEditor/blocklyEditorView.tmpl
@@ -22,8 +22,9 @@
     <block type="cursor_rotate"><title name="NAME">rotateBy</title><value name="rX"><block type="math_number"><title name="NUM">0</title></block></value><value name="rY"><block type="math_number"><title name="NUM">0</title></block></value><value name="rZ"><block type="math_number"><title name="NUM">45</title></block></value></block>
     <block type="cursor_scale"><value name="X"><block type="math_number"><title name="NUM">1</title></block></value><value name="Y"><block type="math_number"><title name="NUM">1</title></block></value><value name="Z"><block type="math_number"><title name="NUM">1</title></block></value></block>
   </category>
-  <category name="Assembly">
+  <category name="Operations">
     <block type="assembly_part"><title name="PARTNAME">Part name 1</title><title name="booleanType">difference</title></block>
+    <block type="pattern_repeat"></block>
   </category>
 
   <category name="Input fields"><block type="input_field_slider"><title name="sliderType">horSlider</title><title name="sliderLabel">Input 1:</title><title name="minVal">0</title><title name="maxVal">20</title><title name="stepIncrement">1</title></block>
