--- a/public/lib/CoffeeSCad/app/editors/blocklyEditor/blocklyEditorView.tmpl
+++ b/public/lib/CoffeeSCad/app/editors/blocklyEditor/blocklyEditorView.tmpl
@@ -25,6 +25,7 @@
   <category name="Operations">
     <block type="assembly_part"><title name="PARTNAME">Part name 1</title><title name="booleanType">difference</title></block>
     <block type="pattern_repeat"><value name="TIMES"><block type="math_number"><title name="NUM">2</title></block></value></block>
+    <block type="pattern_fan_out" inline="true" x="12" y="70"><title name="AXIS">Z</title><value name="ANGLE"><block type="math_number"><title name="NUM">360</title></block></value><value name="REPEAT"><block type="math_number"><title name="NUM">3</title></block></value><statement name="STATEMENTS"><block type="shape_cube" inline="true"><title name="CENTEROBJECT">TRUE</title><value name="width"><block type="math_number"><title name="NUM">100</title></block></value><value name="depth"><block type="math_number"><title name="NUM">20</title></block></value><value name="height"><block type="math_number"><title name="NUM">20</title></block></value></block></statement></block>
   </category>
 
   <category name="Advanced">
