--- a/public/lib/CoffeeSCad/app/editors/blocklyEditor/blocklyEditorView.tmpl
+++ b/public/lib/CoffeeSCad/app/editors/blocklyEditor/blocklyEditorView.tmpl
@@ -1,11 +1,11 @@
 <script id="blocklyEditorViewTmpl" type="text/x-underscore-template">
-  <table style="width:100%">
-   <tr>
-     <td><div id="quickSearchDiv"><input type="text" style="color: grey;" title="Quick commands (/)" value="Quick commands (/)" autocomplete="off" onfocus="if(this.value=='Quick commands (/)'){this.value='';$(this).css('color','black');}" onblur="if(this.value==''){this.value='Quick commands (/)';$(this).css('color','grey');}"></div>
-     <div id="qsResults"></div></td>
-   </tr>
- </table>
- <div id="blocklyToolbox" >
+<table style="width:100%">
+	<tr>
+	  <td><div id="quickSearchDiv"><input type="text" style="color: grey;" title="Quick commands (/)" value="Quick commands (/)" autocomplete="off" onfocus="if(this.value=='Quick commands (/)'){this.value='';$(this).css('color','black');}" onblur="if(this.value==''){this.value='Quick commands (/)';$(this).css('color','grey');}"></div>
+	  	<div id="qsResults"></div></td>
+	</tr>
+</table>
+<div id="blocklyToolbox" >
   <category name="Numbers">
     <block type="math_number"><title name="NUM">10</title></block>
     <block type="math_arithmetic"><title name="OP">ADD</title><value name="A"><block type="math_number"><title name="NUM">10</title></block></value><value name="B"><block type="math_number"><title name="NUM">10</title></block></value></block>
@@ -24,11 +24,11 @@
   </category>
   <category name="Operations">
     <block type="assembly_part"><title name="PARTNAME">Part name 1</title><title name="booleanType">difference</title></block>
-    <block type="pattern_repeat"><value name="TIMES"><block type="math_number"><title name="NUM">2</title></block></value></block>
-    <block type="pattern_grid" inline="true" x="2" y="82"><value name="XCOUNT"><block type="math_number"><title name="NUM">2</title></block></value><value name="YCOUNT"><block type="math_number"><title name="NUM">2</title></block></value><value name="ZCOUNT"><block type="math_number"><title name="NUM">1</title></block></value><value name="SPACEX"><block type="math_number"><title name="NUM">15</title></block></value><value name="SPACEY"><block type="math_number"><title name="NUM">15</title></block></value><value name="SPACEZ"><block type="math_number"><title name="NUM">15</title></block></value><statement name="STATEMENTS"><block type="shape_cube" inline="true"><title name="CENTEROBJECT">TRUE</title><value name="width"><block type="math_number"><title name="NUM">5</title></block></value><value name="depth"><block type="math_number"><title name="NUM">5</title></block></value><value name="height"><block type="math_number"><title name="NUM">10</title></block></value></block></statement></block>
-    <block type="pattern_fan_out" inline="true" x="12" y="70"><title name="AXIS">Z</title><value name="ANGLE"><block type="math_number"><title name="NUM">360</title></block></value><value name="REPEAT"><block type="math_number"><title name="NUM">3</title></block></value><statement name="STATEMENTS"><block type="shape_cube" inline="true"><title name="CENTEROBJECT">TRUE</title><value name="width"><block type="math_number"><title name="NUM">100</title></block></value><value name="depth"><block type="math_number"><title name="NUM">20</title></block></value><value name="height"><block type="math_number"><title name="NUM">20</title></block></value></block></statement></block>
+    <block type="pattern_repeat"></block>
   </category>
 
+  <category name="Input fields"><block type="input_field_slider"><title name="sliderType">horSlider</title><title name="sliderLabel">Input 1:</title><title name="minVal">0</title><title name="maxVal">20</title><title name="stepIncrement">1</title></block>
+</category>
   <category name="Advanced">
     <category name="Math">
       <block type="math_constant"><title name="CONSTANT">PI</title></block>
@@ -39,17 +39,15 @@
       <block type="math_random_float"></block>
 
     </category>
-    <category name="Input fields"><block type="input_field_slider"><title name="sliderType">horSlider</title><title name="sliderLabel">Input 1:</title><title name="minVal">0</title><title name="maxVal">20</title><title name="stepIncrement">1</title></block>
+    <category name="Variables" custom="VARIABLE"></category>
+    <category name="Polygons">
+      <block type="polygons_sketch"><title name="code">[0,0],[10,0],[0,10]</title></block>
+      <block type="polygons_polygon"><title name="polyName">polyline</title><statement name="pointList"><block type="polygons_point" inline="true"><next><block type="polygons_point" inline="true"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="polygons_point" inline="true"><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block></next></block></next></block></statement></block>
+      <block type="polygons_point"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block>
+      <block type="polygons_extrude"><value name="extrudeZ"><block type="math_number"><title name="NUM">10</title></block></value></block>
+      <block type="polygons_expand"><value name="expandX"><block type="math_number"><title name="NUM">10</title></block></value><value name="expandY"><block type="math_number"><title name="NUM">10</title></block></value></block>
+    </category>
   </category>
-  <category name="Variables" custom="VARIABLE"></category>
-  <category name="2D">
-    <block type="polygons_sketch"><title name="code">[0,0],[10,0],[0,10]</title></block>
-    <block type="polygons_polygon"><title name="polyName">polyline</title><statement name="pointList"><block type="polygons_point" inline="true"><next><block type="polygons_point" inline="true"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="polygons_point" inline="true"><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block></next></block></next></block></statement></block>
-    <block type="polygons_point"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block>
-    <block type="polygons_extrude"><value name="extrudeZ"><block type="math_number"><title name="NUM">10</title></block></value></block>
-    <block type="polygons_expand"><value name="expandX"><block type="math_number"><title name="NUM">10</title></block></value><value name="expandY"><block type="math_number"><title name="NUM">10</title></block></value></block>
-  </category>
-</category>
 </div>
 <div id="svgDiv" style="width: 100%"></div>
 <embed id="inputPane" src="assets/plane.svg" height=10 width=10 type="image/svg+xml"></embed>
