updated style/less/css folder from coffeescad

--- a/public/lib/CoffeeSCad/src/style/coffeescad/dock.less
+++ b/public/lib/CoffeeSCad/src/style/coffeescad/dock.less
@@ -68,8 +68,7 @@
 .draggingpanel
 {
     cursor: move;
-    border: 2px dashed rgb(255, 194, 0);
-    color: Red;
+    //border: 2px dashed rgb(255, 194, 0);
     opacity: 0.5;
 }
 .dockedpanel
