--- a/public/lib/CoffeeSCad/src/style/coffeescad/mixins.less
+++ b/public/lib/CoffeeSCad/src/style/coffeescad/mixins.less
@@ -1,5 +1,5 @@
 // Gradient Bar Colors for buttons and alerts
-.gradientBar(@primaryColor, @secondaryColor, @textColor: #fff, @textShadow: 0 -1px 0 rgba(0,0,0,.25)) {
+.gradientBar(@primaryColor, @secondaryColor, @textColor: #fff, @textShadow: none) {
   color: @textColor;
   text-shadow: @textShadow;
   #gradient > .vertical(@primaryColor, @primaryColor);
