updated some elements of the core

--- a/public/lib/CoffeeSCad/src/app/core/mainMenu.tmpl
+++ b/public/lib/CoffeeSCad/src/app/core/mainMenu.tmpl
@@ -14,14 +14,14 @@
                       	</a>
                       	<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 				    		<li id ="newFileBtn" class="dropdown-submenu">
-				    			<a tabindex="-1" href="#"><i class="icon-file"></i>New</a>
+				    			<a tabindex="-1" href="#"><i class="icon-fixed-width icon-file"></i>New</a>
 				    			<ul class="dropdown-menu">
 				    				<li class="newProject"><a tabindex="-1" href="#">Project</a></li>
 				    			</ul>
 				    		</li>
-                      		<li id ="saveFileBtn" class="saveProject"><a tabindex="-1" href="#"><i class="icon-save"></i>Save</a></li>
-				    			<li id ="saveFileAsBtn" class="saveProjectAs"><a tabindex="-1" href="#"><i class="icon-save"></i>Save As</a></li>
-				    			<li id ="loadFileBtn" class="loadProject"><a tabindex="-1" href="#"><i class="icon-folder-open"></i>Load</a></li>
+                      		<li id ="saveFileBtn" class="saveProject"><a tabindex="-1" href="#"><i class="icon-fixed-width icon-save"></i>Save</a></li>
+				    			<li id ="saveFileAsBtn" class="saveProjectAs"><a tabindex="-1" href="#"><i class="icon-fixed-width icon-save"></i>Save As</a></li>
+				    			<li id ="loadFileBtn" class="loadProject"><a tabindex="-1" href="#"><i class="icon-fixed-width icon-folder-open"></i>Load</a></li>
 				    			<li class="divider"></li>
 				    			<!--<li id ="browseProjectsBtn" class="browseProjects"><a tabindex="-1" href="#"><i class="icon-list"></i>Explore</a></li>
 				    			<li class="dropdown-submenu">
@@ -29,17 +29,17 @@
 				    				<ul id="recentProjects" class="dropdown-menu"></ul>
 				    			</li>-->
 				    			<li class="dropdown-submenu" id="examples">
-				    				<a tabindex="-1" href="#"><i class="icon-list-ul"></i>Examples</a>
+				    				<a tabindex="-1" href="#"><i class="icon-fixed-width icon-list-ul"></i>Examples</a>
 				    			</li>
 		                        <li class="divider"></li>
 		                        <li id ="importBtn" class="dropdown-submenu">
-				    				<a tabindex="-1" href="#"><i class="icon-download-alt"></i>Import</a>
+				    				<a tabindex="-1" href="#"><i class="icon-fixed-width icon-download-alt"></i>Import</a>
 				    				<ul class="dropdown-menu">
-                    					<li><a href="#" class="btn disabled"><i class="icon-download disabled"></i> Openscad</a></li>
+                    					<li><a href="#" class="btn disabled"><i class="icon-fixed-width icon-download disabled"></i> Openscad</a></li>
 				    				</ul>
 				    			</li>
 		                        <li id ="exportBtn" class="dropdown-submenu">
-				    				<a tabindex="-1" href="#"><i class="icon-upload-alt"></i>Export</a>
+				    				<a tabindex="-1" href="#"><i class="icon-fixed-width icon-upload-alt"></i>Export</a>
 				    				<ul id="exporters" class="dropdown-menu"></ul>
 				    			</li>
                       	</ul>
@@ -87,24 +87,24 @@
 				    			<ul class="dropdown-menu">
                     				<li>
 										<a href="//plus.google.com/117965920069380418940?prsrc=3" rel="publisher" style="text-decoration:none;" target="_blank">
-										Follow Coffeescad on <img src="//ssl.gstatic.com/images/icons/gplus-16.png" alt="Google+" style="border:0;width:16px;height:16px;"/></a>
+										Follow Coffeescad on <img src="assets/img/gplus-16.png" alt="Google+" style="border:0;width:16px;height:16px;"/></a>
 									</li>
                     				<li><a href="https://github.com/kaosat-dev/CoffeeSCad" target="_blank">Github</a></li>
 				    			</ul>
 				    		</li>
-                     		<li class="about"><a href="#"><i class="icon-bullhorn"></i>About CoffeeSCad</a></li>
+                     		<li class="about"><a href="#"><i class="icon-fixed-width icon-bullhorn"></i>About CoffeeSCad</a></li>
                      	</ul>
                      </li>
                       <li id="undoBtn" class="undo"> 
-                      	<a href="#" rel="tooltip" title="Undo (CTRL+Z)"><i class="icon-undo "></i></a>
+                      	<a href="#" rel="tooltip" title="Undo (CTRL+Z)"><i class="icon-fixed-width icon-undo "></i></a>
                       <li id="redoBtn" class="redo">
-                      	<a href="#" rel="tooltip" title="Redo (CTRL+Y)"><i class="icon-repeat "></i></a>
+                      	<a href="#" rel="tooltip" title="Redo (CTRL+Y)"><i class="icon-fixed-width icon-repeat "></i></a>
                      </li>
                      <li>
-                     	<a id="compileBtn" class="disabled compileProject" href="#" rel="tooltip" title="Compile and render project" ><i class="icon-bolt"></i></a>
+                     	<a id="compileBtn" class="disabled compileProject" href="#" rel="tooltip" title="Compile and render project" ><i class="icon-fixed-width icon-bolt"></i></a>
                      </li>
                      <li class="hide">
-                     	<a id="abortBtn" href="#" rel="tooltip" title="Abort"><i class="icon-remove"></i></a>
+                     	<a id="abortBtn" href="#" rel="tooltip" title="Abort"><i class="icon-fixed-width icon-remove"></i></a>
                      </li>
                      <li class="divider-vertical" id="editorsMarker"></li>
                     </ul>
