--- a/public/lib/CoffeeSCad/src/app/core/settings/settings.tmpl
+++ b/public/lib/CoffeeSCad/src/app/core/settings/settings.tmpl
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 	<div class="modal-footer">
-		<!--<button class="btn applySettings pull-left">Reset all</button>-->
+		<button class="btn resetSettings pull-left">Reset all</button>
 		<button class="btn applySettings">Apply</button>
 		<button class="btn" data-dismiss="modal">Close</button>
 		<button class="btn btn-primary applySettings" data-dismiss="modal">Save</button>
