updated/merge project related files

--- a/public/lib/CoffeeSCad/src/app/core/projects/projectBrowser.tmpl
+++ b/public/lib/CoffeeSCad/src/app/core/projects/projectBrowser.tmpl
@@ -11,12 +11,14 @@
 			<div id="projectStores" style="float:left; width: 30%"><!--storage types browser-->
 				Location
 			</div>
-			<div id="projectFiles"  style="float:left; width: 40%" >
-				<ul>
-					
-				</ul>
+			<div id="projectFiles"  style="float:left; width: 40%">
+				<table class="table table-hover table-condensed">
+					<thead><th>Name</th><th>Type</th></thead>
+			    	<tbody id="projectFilesList"></tbody>
+			  	</table>
 			</div>
-			<div id="thumbNail" style="float:left; width:30%;background-color:  #262626;" class="hide">
+			<div id="thumbNail" style="float:left; width:30%" class="hide">
+			<!--background-color:  #262626;-->
 				<img id="projectThumbNail" class="img-rounded"/>
 			</div>
 		</div>
@@ -42,7 +44,6 @@
 </script>
 
 
-
 <script id="projectStoreListTmpl" type="text/x-underscore-template">
 	<div class="accordion" id="accordion" >
 	</div>
@@ -51,11 +52,14 @@
 <script id="projectStoreTmpl" type="text/x-underscore-template">
 	<div class="accordion-group" id="<%=name%>StoreContent">
 	 	<div class="accordion-heading store-header" >
-	 		<a class="accordion-toggle"> <!--data-toggle="collapse" data-parent="#accordion" href="#collapseOne">-->
-				<%= storeType %> <i class="icon-question-sign icon-large" rel="tooltip" title="<%=tooltip%>"></i>
+	 		<a class="accordion-toggle">
+	 			<span>
+				<%= storeType %> <i class="icon-question-sign icon-large" rel="tooltip" title="<%=tooltip%>"></i> 
+				</span>
+				<span class="storeConnection pull-right" rel="tooltip" title="Store not connected, please sign in">
+					<i class="icon-ban-circle icon-large" style="color:#FF0000"></i>
+				</span>
 			</a>
-			
-			
 		</div>
 		<div id="collapseOne" class="accordion-body collapse in">
 			<div class="accordion-inner storeProjectsList" ><!--style="overflow:auto;max-height: 150px">-->
@@ -64,6 +68,12 @@
 			</div>
 		</div>
 	</div>
+	<div id="<%=name%>ProjectContextMenu">
+      <ul class="dropdown-menu" role="menu">
+          <li><a tabindex="-1" href="#" class="deleteProject"><i class="icon-remove"></i>Delete</a></li>
+          <li><a tabindex="-1" href="#" class="renameProject"><i class="icon-edit"></i>Rename</a></li>
+      </ul>
+    </div>
 </script>
 
 <script id="projectFileListTmpl" type="text/x-underscore-template">
